--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 const a = bestActionForCell(r, c);
                 const cx = c * cell + cell / 2;
                 const cy = r * cell + cell / 2;
-                const len = cell * 0.22;
+                const len = cell * 0.28;
 
                 let dx = 0,
                   dy = 0;
@@ -455,25 +455,29 @@
                 else if (a === 2) dy = len;
                 else dx = -len;
 
+                // Center the arrow: start from center - len/2, end at center + len/2
+                const startX = cx - dx / 2;
+                const startY = cy - dy / 2;
+                const endX = cx + dx / 2;
+                const endY = cy + dy / 2;
+
                 ctx.beginPath();
-                ctx.moveTo(cx, cy);
-                ctx.lineTo(cx + dx, cy + dy);
+                ctx.moveTo(startX, startY);
+                ctx.lineTo(endX, endY);
                 ctx.stroke();
 
                 const angle = Math.atan2(dy, dx);
-                const head = cell * 0.1;
-                const ax = cx + dx,
-                  ay = cy + dy;
+                const head = cell * 0.12;
 
                 ctx.beginPath();
-                ctx.moveTo(ax, ay);
+                ctx.moveTo(endX, endY);
                 ctx.lineTo(
-                  ax - head * Math.cos(angle - Math.PI / 6),
-                  ay - head * Math.sin(angle - Math.PI / 6)
+                  endX - head * Math.cos(angle - Math.PI / 6),
+                  endY - head * Math.sin(angle - Math.PI / 6)
                 );
                 ctx.lineTo(
-                  ax - head * Math.cos(angle + Math.PI / 6),
-                  ay - head * Math.sin(angle + Math.PI / 6)
+                  endX - head * Math.cos(angle + Math.PI / 6),
+                  endY - head * Math.sin(angle + Math.PI / 6)
                 );
                 ctx.closePath();
                 ctx.fill();
@@ -510,6 +514,53 @@
             Math.PI * 2
           );
           ctx.fill();
+
+          // White arrow on top of the dot to show learned policy
+          if (showArrows.checked) {
+            const a = bestActionForCell(dot.r, dot.c);
+            const cx = dot.c * cell + cell / 2;
+            const cy = dot.r * cell + cell / 2;
+            const len = cell * 0.28;
+
+            let dx = 0,
+              dy = 0;
+            if (a === 0) dy = -len;
+            else if (a === 1) dx = len;
+            else if (a === 2) dy = len;
+            else dx = -len;
+
+            // Center the arrow: start from center - len/2, end at center + len/2
+            const startX = cx - dx / 2;
+            const startY = cy - dy / 2;
+            const endX = cx + dx / 2;
+            const endY = cy + dy / 2;
+
+            ctx.strokeStyle = '#ffffff';
+            ctx.fillStyle = '#ffffff';
+            ctx.lineWidth = 3.5;
+            ctx.lineCap = 'round';
+
+            ctx.beginPath();
+            ctx.moveTo(startX, startY);
+            ctx.lineTo(endX, endY);
+            ctx.stroke();
+
+            const angle = Math.atan2(dy, dx);
+            const head = cell * 0.12;
+
+            ctx.beginPath();
+            ctx.moveTo(endX, endY);
+            ctx.lineTo(
+              endX - head * Math.cos(angle - Math.PI / 6),
+              endY - head * Math.sin(angle - Math.PI / 6)
+            );
+            ctx.lineTo(
+              endX - head * Math.cos(angle + Math.PI / 6),
+              endY - head * Math.sin(angle + Math.PI / 6)
+            );
+            ctx.closePath();
+            ctx.fill();
+          }
         }
 
         function movingAverage(data, windowSize) {
