bug fix: coordinate of the star location in (x, y) format

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           totalPointsStat.textContent = String(totalPoints);
           movesStat.textContent = String(moves);
           pointsStat.textContent = String(points);
-          starStat.textContent = `(${star.r}, ${star.c})`;
+          starStat.textContent = `(${star.c}, ${star.r})`;
         }
 
         function drawGrid() {
