coordinate system now works like a standard cartesian plane

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           totalPointsStat.textContent = String(totalPoints);
           movesStat.textContent = String(moves);
           pointsStat.textContent = String(points);
-          starStat.textContent = `(${star.c}, ${star.r})`;
+          starStat.textContent = `(${star.c}, ${N - 1 - star.r})`;
         }
 
         function drawGrid() {
